Fix wrong colors on 'light' skin
Enact-DCO-1.0-Signed-off-by: Seungcheon Baek (sc.baek@lge.com)

--- a/styles/colors-highcontrast.less
+++ b/styles/colors-highcontrast.less
@@ -8,6 +8,7 @@
 // UI Conceptual Colors
 // ---------------------------------------
 @sand-highcontrast-overlay-bg-color: rgb(@sand-overlay-bg-color-rgb);
+@sand-highcontrast-keyguide-bg-color: rgb(@sand-untypical-color-01-rgb);
 
 
 // ---------------------------------------
@@ -20,11 +21,11 @@
 
 // Input
 // ---------------------------------------
-@sand-input-fullscreen-background-color: @sand-highcontrast-overlay-bg-color; // TBD
+@sand-input-fullscreen-background-color: @sand-highcontrast-overlay-bg-color;
 
 // KeyGuide
 // ---------------------------------------
-@sand-keyguide-bg-color: #373A41;
+@sand-keyguide-bg-color: @sand-highcontrast-keyguide-bg-color;
 
 // Popup
 // ---------------------------------------
