--- a/styles/colors-light.less
+++ b/styles/colors-light.less
@@ -8,14 +8,13 @@
 
 // UI Conceptual Colors
 // ---------------------------------------
-@sand-bg-color: var(--sand-bg-color, #cacbcc);
-@sand-text-color: var(--sand-text-color, #2e3239);
-@sand-text-sub-color: var(--sand-text-sub-color, #2e3239);
-@sand-shadow-color-rgb: var(--sand-shadow-color-rgb, 46, 50, 57); // #2e3239
-@sand-shadow-color: rgb(@sand-shadow-color-rgb, 30%);
+@sand-bg-color: var(--sand-alert-overlay-bg-color, #cacbcc);
+@sand-text-color: var(--sand-alert-overlay-text-color, #2e3239);
+@sand-text-sub-color: var(--sand-alert-overlay-text-sub-color, #2e3239);
+@sand-shadow-color-rgb: var(--sand-alert-overlay-shadow-color-rgb, 46, 50, 57); // #2e3239
 
-@sand-progress-color-rgb: var(--sand-progress-color-rgb, 55, 58, 65); // #373a41
-@sand-progress-bg-color-rgb: var(--sand-progress-bg-color-rgb, 161, 161, 161); // #a1a1a1
+@sand-progress-color-rgb: var(--sand-alert-overlay-progress-color-rgb, 55, 58, 65); // #373a41
+@sand-progress-bg-color: var(--sand-alert-overlay-progress-bg-color, #a1a1a166); // 40% alpha by default
 
 
 // ---------------------------------------
@@ -24,17 +23,17 @@
 
 // Alert
 // ---------------------------------------
-@sand-alert-overlay-bg-color: rgb(@sand-untypical-color-13-rgb, 95%); // TBD
+@sand-alert-overlay-bg-color: rgb(var(--sand-alert-overlay-bg-color-rgb, 202, 203, 204), 95%); // #cacbcc
 
 // Checkbox
 // ---------------------------------------
-@sand-checkbox-border-color: #858b92; // TBD
-@sand-checkbox-disabled-selected-color: #ffffff; // TBD
+@sand-checkbox-border-color: var(--sand-alert-overlay-checkbox-border-color, #858b92);
+@sand-checkbox-disabled-selected-color: var(--sand-alert-overlay-checkbox-disabled-selected-color, #ffffff);
+
+// FormCheckboxItem
+// ---------------------------------------
+@sand-formcheckboxitem-focus-text-color: var(--sand-alert-overlay-formcheckboxitem-focus-text-color, #575e66);
 
 // Item
 // ---------------------------------------
-@sand-item-disabled-focus-bg-color: #989ca2; // TBD
-
-// ProgressBar
-// ---------------------------------------
-@sand-progressbar-bar-bg-color: rgb(@sand-progress-bg-color-rgb, 40%);
+@sand-item-disabled-focus-bg-color: var(--sand-alert-overlay-item-disabled-focus-bg-color, #989ca2);
